= Version History =

x.x:

- fixed: wrong default message body
- fixed: limit issues with the new activity tabs
- fixed: bug with notify => site not working in some cases

1.1 (2012-12-20):

- added: optional replace site notifications with a personalized river view

1.0 (2012-12-11):

- first release