@@ -5,6 +5,7 @@ x.x:
 - fixed: wrong default message body
 - fixed: limit issues with the new activity tabs
 - fixed: bug with notify => site not working in some cases
+- changed: moved plugin hook functions to own file 
 
 1.1 (2012-12-20):
 
